assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Jua&display=swap");

:root {
  --font-1: "Exo";
  --font-2: "Jua";
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Exo;
  background-color: rgb(2, 2, 2);
  min-height: 100vh;
}

/* Force override of bootstrap row style to ensure page width
was kept at the correct amounts. */
.row {
  margin: 0 !important;
  padding: 0 !important;
}

/* NAVBAR for desktop*/

.desktop-nav {
  position: fixed; /* position absolutely so it won't follow*/
  top: 0;
  left: 0;
  height: 70px;
  padding-top: 15px;
  padding-bottom: 15px;
  align-items: center;
  background: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center; /* center nav links */
  width: 100%;
  z-index: 1000;
}

.mobile-nav {
  display: none;
  position: fixed;
  bottom: 0;
  left: 0;
  height: 8%;
  width: 100%;
  background: rgba(0, 0, 0, 0.9);
  padding: 10px 20px;
  justify-content: space-evenly;
  z-index: 1000;
}

.mobile-nav button {
  width: 50%;
  background: none;
  border: none;
  outline: none;
  color: white;
  font-size: 1.5rem;
}

.mobile-nav > button:first-child {
  text-align: left;
  margin-left: 1rem;
}

.mobile-nav > button {
  text-align: right;
  margin-right: 1rem;
}

.nav-links a {
  color: white;
  margin-left: 3rem;
  text-decoration: none;
  margin-right: 3rem;
  font-size: 1.5rem;
  line-height: 1.5rem;
  transition: ease 0.4s;
}

.nav-links a:hover {
  color: rgb(255, 150, 13);
}

.nav-logo img {
  margin-left: 5rem;
  margin-right: 5rem;
  height: 40px;
}

/* HERO IMAGE */

#header {
  position: relative;
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.hero-image {
  width: 100%;
  height: auto;
  object-fit: cover;
}

.hero h1 {
  display: flex;
  color: white;
  position: absolute;
  font-size: 10rem;
  top: 20%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family: var(--font-2);
  letter-spacing: 0.5rem;
  text-shadow: 3px 2px 1px black;
  background-color: transparent;
  opacity: 1 !important;
}

#about {
  width: fit-content;
  height: fit-content;
  background: url("../images/about.png") center left/cover no-repeat;
}

.about-content {
  position: relative;
  padding: 4rem 0;
  box-sizing: border-box;
  width: 100%;
  z-index: 2;
  background: linear-gradient(
    to bottom,
    #000000 6rem,
    rgba(18, 154, 240, 0) 100%
  );
}

.callout-h1 {
  font-weight: 700;
  font-size: 5rem;
  color: white;
  margin: 2rem 3rem;
  z-index: 99;
}

.callout-h3 {
  font-weight: 200;
  color: white;
  margin: 2rem 3rem;
  z-index: 99;
  font-size: 3rem;
}

.about-inner article p {
  text-shadow: 1px 2px 1px black;
  color: white;
  font-size: 2.5rem;
  padding: 0rem 3rem 1.5rem 3rem;
  z-index: 99;
}

.features {
  display: none;
}

#video-embed iframe {
  display: flex;
  position: relative;
  width: 1280px;
  margin: auto;
  margin-top: 3rem;
  margin-bottom: 5rem;
  box-shadow: 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.25);
}

#reviews {
  position: relative;
  color: white;
  height: 100%;
  width: 90%;
  left: 5%;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

#reviews h3 {
  font-size: 2.5rem;
  text-align: left;
}

#reviews p {
  text-align: right;
  padding-top: 2rem;
  margin-bottom: 2rem;
  font-size: 1.5rem;
}

#reviews i {
  color: rgb(221, 155, 33);
  width: 35px;
  transform: scale(1.3);
}

#reviews::before {
  background-image: url("/assets/images/test.webp");
  background-size: cover; /* Ensure the image covers the whole element */
  background-position: center; /* Center the image */
  filter: blur(8px); /* Apply a blur effect */
  z-index: 1;
}

.gallery {
  margin-bottom: 3rem !important;
}

footer h2 {
  font-weight: 200;
}

footer .media-links {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  justify-content: center;
}

footer .media-links a {
  position: relative;
  display: block;
  text-align: center;
  height: 8rem;
  width: 8rem;
  background-position: 50% 35%;
  background-size: auto 4rem;
  background-repeat: no-repeat;
  transition: 0.1s ease background-color, 0.1s ease opacity,
    0.1s ease background-size;
  cursor: pointer;
  color: white;
  margin: 1rem;
}

footer .media-links a i {
  font-size: 6rem;
}

footer .media-links a p {
  font-size: 1.4rem;
}

footer button {
  margin-top: 1rem;
  margin-bottom: 2rem;
  background-color: rgb(230, 138, 0) !important;
  border: none !important;
  font-size: 3rem !important;
}

.company-details {
  text-align: center;
}

.company-details .logo .icon {
  margin-bottom: 10px;
}

.company-details .brand-name {
  font-size: 1.5rem;
  font-weight: bold;
  letter-spacing: 0.15rem;
  margin: 10px 0;
}

.social-media h2 {
  margin-top: 2rem !important;
}

.footer-links p {
  font-size: 0.9rem;
  color: #b0b0b0;
  margin-top: 2rem;
  font-size: 1.2rem;
}

.footer-links a {
  color: #fff;
  text-decoration: none;
  margin: 0 5px;
}

.footer-links a:hover {
  text-decoration: underline;
}

.footer-links span {
  margin: 0 5px;
}

.modal-dialog {
  display: flex;
  position: relative;
  justify-content: center;
  top: 40%;
}

.modal-content {
  background-color: #0c0c0c;
  opacity: 0.95;
  padding: 2rem;
}

.modal-header {
  display: none;
}

.modal-body form label {
  font-size: 1.5rem;
}

.modal-body form button {
  margin: 0;
  background-color: rgb(230, 138, 0) !important;
  border: none !important;
  font-size: 2rem !important;
}

.modal-body form .form-control {
  font-size: 2rem;
  height: calc(2.25rem + 10px) !important;
  padding: 0.5rem;
}

.modal-body form .form-text {
  font-size: 1rem;
}

@media (max-width: 1440px) {
  .desktop-nav {
    display: flex;
  }

  .about-inner article h1 {
    font-size: 5rem;
  }

  .about-inner article h3 {
    font-size: 3rem;
  }

  .about-inner article p {
    font-size: 2.5rem;
  }

  .purchase-dropdown,
  .menu-dropdown {
    display: none;
  }
}

@media (max-width: 1024px) {
  .desktop-nav {
    display: none;
  }

  .mobile-nav {
    display: flex;
  }

  .mobile-nav button {
    font-size: 4rem;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
  }

  .mobile-nav > button {
    margin-left: 4rem;
  }

  .mobile-nav > button:first-child {
    margin-right: 4rem;
  }

  .dropdown {
    display: none;
    position: fixed;
    height: 450px;
    bottom: 7.9%;
    left: 0;
    width: 100%;
    background: rgba(0, 0, 0, 0.9);
    padding: 30px;
    margin: 0;
    border: none;
    z-index: 1000;
    transition: ease-in(0.3s);
  }

  .dropdown a {
    color: white;
    text-decoration: none;
    display: block;
    margin: 10px 0;
    font-size: 2.8rem;
    transition: 0.3s;
    text-align: justify;
  }

  .dropdown a:hover {
    color: orangered;
  }

  .nomadica a {
    padding-left: 8%;
  }

  .purchase a {
    text-align: right;
    padding-right: 8%;
  }

  .market-img {
    width: 50px;
    align-items: center;
  }

  /* Scroll Behavior */
  .mobile-nav.scrolled {
    bottom: unset; /* Unset bottom positioning */
    top: 0; /* Stick to the top */
  }

  .dropdown-scrolled {
    top: unset;
    top: 7.9%;
  }

  .nav-links .hero-image {
    width: 100%;
  }

  .hero {
    height: 100vh;
  }

  .hero-image {
    width: 100vw; /* Ensures it fills the viewport width */
    height: 100vh; /* Ensures it fills the viewport height */
    object-fit: cover; /* Scales image to fill the container, cropping overflow */
    object-position: center; /* Centers the image */
  }

  .about-inner article h3 {
    font-size: 4rem;
  }

  .about-inner article p {
    font-size: 2rem;
  }

  .landing-image {
    transform: scale(1.4);
  }
}

@media (max-width: 768px) {
  .mobile-nav button {
    font-size: 2.5rem;
  }
  .dropdown {
    height: 400px;
    bottom: 7.9%;
  }

  .dropdown a {
    font-size: 2.3rem;
  }

  .nomadica a {
    padding-left: 9%;
  }

  .purchase a {
    text-align: right;
    padding-right: 9%;
  }

  .market-img {
    width: 40px;
  }

  .dropdown-scrolled {
    top: 7.9;
  }

  .about-inner {
    height: 130vh;
  }

  .landing-image {
    transform: scale(1.2);
  }

  .about-inner article h3 {
    font-size: 2.5rem;
  }

  .about-inner article p {
    font-size: 1.6rem;
  }

  footer .logo {
    margin-bottom: 2rem;
  }

  .footer-links p {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
  }

  .footer-links a,
  .footer-links span {
    margin: 0;
    width: 100%;
    padding: 1rem;
    text-align: center;
    border-top: 1px solid rgba(255, 255, 255, 0.1);
    font-size: 1.2rem;
  }

  .text-break {
    display: none;
  }
}

@media (max-width: 450px) {
  .mobile-nav {
    padding-left: 0;
    padding-right: 0;
  }

  .mobile-nav button {
    font-size: 2rem;
  }

  .mobile-nav > button {
    margin-left: 1rem;
  }

  .mobile-nav > button:first-child {
    margin-right: 1rem;
  }

  .dropdown {
    height: 310px;
    bottom: 7.9%;
    padding-left: 0;
    padding-right: 0;
  }

  .dropdown a {
    font-size: 1.6rem;
  }

  .nomadica a {
    padding-left: 10%;
  }

  .purchase a {
    text-align: right;
    padding-right: 10%;
  }

  .market-img {
    width: 30px;
  }

  .dropdown-scrolled {
    top: 7.9%;
  }

  .about-content {
    padding-top: 1rem;
  }

  .callout-h1 {
    font-size: 2.5rem;
    padding-right: 1rem;
  }

  .about-inner article h1 {
    font-size: 2.5rem;
  }

  .about-inner article h3 {
    font-size: 2.3rem;
  }

  .about-inner article p {
    font-size: 1.3rem;
  }

  .landing-image {
    transform: scale(1);
  }

  #reviews {
    left: 10%;
    width: 80%;
  }

  #reviews .review h3 {
    padding-bottom: 0.5rem;
    font-size: 1.5rem;
  }

  #reviews .review p {
    padding-bottom: 0.5rem;
    font-size: 1rem;
    text-align: right;
  }

  footer button {
    margin-top: 1rem;
    margin-bottom: 2rem;
    background-color: rgb(230, 138, 0) !important;
    border: none !important;
    font-size: 2rem !important;
  }
}

@media (max-width: 375px) {
  .landing-image {
    height: 1200px;
    object-fit: cover;
    overflow: hidden;
  }

  .mobile-nav button {
    font-size: 1.5rem;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
  }

  .mobile-nav > button {
    margin-left: 2rem;
  }

  .mobile-nav > button:first-child {
    margin-right: 2rem;
  }

  .dropdown {
    height: 200px;
    bottom: 7.9%;
    padding-top: 0;
  }

  .dropdown a {
    font-size: 1rem;
  }

  .nomadica a {
    padding-left: 8%;
  }

  .purchase a {
    text-align: right;
    padding-right: 9%;
  }

  .market-img {
    width: 24px;
  }

  .about-inner article h1 {
    font-size: 2.5rem;
  }

  .about-inner article h3 {
    font-size: 1.5rem;
  }

  .about-inner article p {
    font-size: 1.1rem;
  }

  footer button {
    font-size: 1.5rem !important;
  }
}

@media (max-width: 320px) {
  .landing-image {
    transform: scale(1.4);
  }

  .dropdown {
    height: 200px;
    bottom: 7.9%;
    padding-top: 0;
  }

  .about-inner article h1 {
    font-size: 2rem;
  }

  .about-inner article h3 {
    font-size: 1.3rem;
  }

  .about-inner article p {
    font-size: 1.1rem;
  }
}

